Netlify cms work

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,9 @@
     {% include head/fonts.html %}
   </head>
   <body>
+    <header>
+      {% include headers/main-header.html %}
+    </header>
     {{ content }}
   </body>
 </html>
