Start building layouts

--- a/_includes/headers/main-header.html
+++ b/_includes/headers/main-header.html
@@ -1,1 +1,8 @@
-<h1>{{ site.title }}</h1>
+<section class="main-title">
+  <div class="title">
+    <h1>{{ site.title | upcase }}</h1>
+  </div>
+  <div class="title">
+    <h2>Since 1879</h2>
+  </div>
+</section>
