--- a/_includes/head/fonts.html
+++ b/_includes/head/fonts.html
@@ -1,2 +1,1 @@
-<link rel='stylesheet' href="//fonts.googleapis.com/css?family=Open+Sans:300italic,700italic,400,600,700,300">
-<link rel='stylesheet' href="https://fonts.googleapis.com/css?family=Bangers">
+<link href="https://fonts.googleapis.com/css?family=Lato:400,400i,700,700i|Stardos+Stencil:700" rel="stylesheet">
