--- a/_includes/head/head.html
+++ b/_includes/head/head.html
@@ -2,3 +2,5 @@
 <title>{{ site.title }}{% if page.title %} | {{ page.title }}{% endif %}</title>
 <meta name="description" {% if page.description %} content="{{ page.description }}"{% else %}content="{{ site.description }}"{% endif %}>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+
+<link rel="stylesheet" href="{{ '/css/main.css' | prepend: site.baseurl }}">
