--- a/_layouts/news-article.html
+++ b/_layouts/news-article.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<h1>Article title - {{ page.title }}</h1>
+<h1>{{ page.title }}</h1>
 
 <img class="feature-image"
   src="{{ page.thumbnail | remove: '.jpg' }}-large.jpg"
